--- a/src/components/products/Products.css
+++ b/src/components/products/Products.css
@@ -3,3 +3,11 @@ p {
     padding: 4px;
     margin:0;
 }
+
+h2{
+    background-color: aliceblue;
+    padding:3px;
+    margin-bottom: 0;
+    color:rgb(245, 48, 81);
+    font-size: 32px;
+}
