--- a/src/components/products/Products.css
+++ b/src/components/products/Products.css
@@ -4,10 +4,20 @@ p {
     margin:0;
 }
 
+h4 {
+    background-color: aliceblue;
+    color:rgb(245, 48, 81);
+    margin-bottom: 0;
+}
+
 h2{
     background-color: aliceblue;
     padding:3px;
     margin-bottom: 0;
     color:rgb(245, 48, 81);
     font-size: 32px;
+}
+
+button{
+    background-color:rgb(118, 252, 252) 
 }
